--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dot-env": "^0.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.6.2"
   }
