--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 EXPRESS_MONGO_DB_URI=mongodb+srv://dhritimansaikia11b244:qn7XYGryOkYYiZv9@cluster0.c4doeee.mongodb.net/dhritimansportfolio
+EXPRESS_PASSWORD=yxaybmcy9j
