--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 EXPRESS_MONGO_DB_URI=mongodb+srv://dhritimansaikia11b244:qn7XYGryOkYYiZv9@cluster0.c4doeee.mongodb.net/dhritimansportfolio
 EXPRESS_PASSWORD=yxaybmcy9j
+EXPRESS_FRONTEND_URL=http://localhost:5173
